Clamp scroll offset after overflow reclacs that are not layout inducing

Changes in overflow content size and clip should trigger a re-clamping of
the scroll offset even if the change is not layout inducing (e.g., transform)

BUG=652092
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2524333003
Cr-Commit-Position: refs/heads/master@{#434679}

Former-commit-id: 79f6f52c6732cd3082a9984329245b41c8c92a42